--- a/Lab 4 - EDA with SQL.ipynb
+++ b/Lab 4 - EDA with SQL.ipynb
@@ -246,86 +246,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * sqlite:///my_data1.db\n",
-      "Done.\n"
+      "UsageError: Line magic function `%sql` not found.\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <thead>\n",
-       "        <tr>\n",
-       "            <th>Landing_Outcome</th>\n",
-       "        </tr>\n",
-       "    </thead>\n",
-       "    <tbody>\n",
-       "        <tr>\n",
-       "            <td>Failure (parachute)</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>No attempt</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>Uncontrolled (ocean)</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>Controlled (ocean)</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>Failure (drone ship)</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>Precluded (drone ship)</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>Success (ground pad)</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>Success (drone ship)</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>Success</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>Failure</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>No attempt </td>\n",
-       "        </tr>\n",
-       "    </tbody>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "[('Failure (parachute)',),\n",
-       " ('No attempt',),\n",
-       " ('Uncontrolled (ocean)',),\n",
-       " ('Controlled (ocean)',),\n",
-       " ('Failure (drone ship)',),\n",
-       " ('Precluded (drone ship)',),\n",
-       " ('Success (ground pad)',),\n",
-       " ('Success (drone ship)',),\n",
-       " ('Success',),\n",
-       " ('Failure',),\n",
-       " ('No attempt ',)]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%sql SELECT DISTINCT(Landing_Outcome) from SPACEXTABLE"
+    "%sql SELECT DISTINCT(Launch_Site) from SPACEXTABLE"
    ]
   },
   {
@@ -341,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {
     "tags": []
    },
@@ -360,97 +295,37 @@
        "<table>\n",
        "    <thead>\n",
        "        <tr>\n",
-       "            <th>Date</th>\n",
-       "            <th>Time (UTC)</th>\n",
-       "            <th>Booster_Version</th>\n",
        "            <th>Launch_Site</th>\n",
-       "            <th>Payload</th>\n",
-       "            <th>PAYLOAD_MASS__KG_</th>\n",
-       "            <th>Orbit</th>\n",
-       "            <th>Customer</th>\n",
-       "            <th>Mission_Outcome</th>\n",
-       "            <th>Landing_Outcome</th>\n",
        "        </tr>\n",
        "    </thead>\n",
        "    <tbody>\n",
        "        <tr>\n",
-       "            <td>2010-06-04</td>\n",
-       "            <td>18:45:00</td>\n",
-       "            <td>F9 v1.0  B0003</td>\n",
        "            <td>CCAFS LC-40</td>\n",
-       "            <td>Dragon Spacecraft Qualification Unit</td>\n",
-       "            <td>0</td>\n",
-       "            <td>LEO</td>\n",
-       "            <td>SpaceX</td>\n",
-       "            <td>Success</td>\n",
-       "            <td>Failure (parachute)</td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>2010-12-08</td>\n",
-       "            <td>15:43:00</td>\n",
-       "            <td>F9 v1.0  B0004</td>\n",
-       "            <td>CCAFS LC-40</td>\n",
-       "            <td>Dragon demo flight C1, two CubeSats, barrel of Brouere cheese</td>\n",
-       "            <td>0</td>\n",
-       "            <td>LEO (ISS)</td>\n",
-       "            <td>NASA (COTS) NRO</td>\n",
-       "            <td>Success</td>\n",
-       "            <td>Failure (parachute)</td>\n",
+       "            <td>VAFB SLC-4E</td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>2012-05-22</td>\n",
-       "            <td>7:44:00</td>\n",
-       "            <td>F9 v1.0  B0005</td>\n",
-       "            <td>CCAFS LC-40</td>\n",
-       "            <td>Dragon demo flight C2</td>\n",
-       "            <td>525</td>\n",
-       "            <td>LEO (ISS)</td>\n",
-       "            <td>NASA (COTS)</td>\n",
-       "            <td>Success</td>\n",
-       "            <td>No attempt</td>\n",
+       "            <td>KSC LC-39A</td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>2012-10-08</td>\n",
-       "            <td>0:35:00</td>\n",
-       "            <td>F9 v1.0  B0006</td>\n",
-       "            <td>CCAFS LC-40</td>\n",
-       "            <td>SpaceX CRS-1</td>\n",
-       "            <td>500</td>\n",
-       "            <td>LEO (ISS)</td>\n",
-       "            <td>NASA (CRS)</td>\n",
-       "            <td>Success</td>\n",
-       "            <td>No attempt</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>2013-03-01</td>\n",
-       "            <td>15:10:00</td>\n",
-       "            <td>F9 v1.0  B0007</td>\n",
-       "            <td>CCAFS LC-40</td>\n",
-       "            <td>SpaceX CRS-2</td>\n",
-       "            <td>677</td>\n",
-       "            <td>LEO (ISS)</td>\n",
-       "            <td>NASA (CRS)</td>\n",
-       "            <td>Success</td>\n",
-       "            <td>No attempt</td>\n",
+       "            <td>CCAFS SLC-40</td>\n",
        "        </tr>\n",
        "    </tbody>\n",
        "</table>"
       ],
       "text/plain": [
-       "[('2010-06-04', '18:45:00', 'F9 v1.0  B0003', 'CCAFS LC-40', 'Dragon Spacecraft Qualification Unit', 0, 'LEO', 'SpaceX', 'Success', 'Failure (parachute)'),\n",
-       " ('2010-12-08', '15:43:00', 'F9 v1.0  B0004', 'CCAFS LC-40', 'Dragon demo flight C1, two CubeSats, barrel of Brouere cheese', 0, 'LEO (ISS)', 'NASA (COTS) NRO', 'Success', 'Failure (parachute)'),\n",
-       " ('2012-05-22', '7:44:00', 'F9 v1.0  B0005', 'CCAFS LC-40', 'Dragon demo flight C2', 525, 'LEO (ISS)', 'NASA (COTS)', 'Success', 'No attempt'),\n",
-       " ('2012-10-08', '0:35:00', 'F9 v1.0  B0006', 'CCAFS LC-40', 'SpaceX CRS-1', 500, 'LEO (ISS)', 'NASA (CRS)', 'Success', 'No attempt'),\n",
-       " ('2013-03-01', '15:10:00', 'F9 v1.0  B0007', 'CCAFS LC-40', 'SpaceX CRS-2', 677, 'LEO (ISS)', 'NASA (CRS)', 'Success', 'No attempt')]"
+       "[('CCAFS LC-40',), ('VAFB SLC-4E',), ('KSC LC-39A',), ('CCAFS SLC-40',)]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "%sql SELECT * FROM SPACEXTABLE WHERE Launch_Site LIKE '%CCA%' LIMIT 5"
+    "%sql SELECT * FROM SPACEXTABLE WHERE Launch_Site LIKE '%CCA%' LIMIT 5\n",
+    "#%sql SELECT distinct(Launch_Site) FROM SPACEXTABLE"
    ]
   },
   {
