--- a/Lab 4 - EDA with SQL.ipynb
+++ b/Lab 4 - EDA with SQL.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
@@ -66,21 +66,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting sqlalchemy==1.3.9\n",
-      "  Downloading SQLAlchemy-1.3.9.tar.gz (6.0 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m6.0/6.0 MB\u001b[0m \u001b[31m66.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m:00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25hBuilding wheels for collected packages: sqlalchemy\n",
-      "  Building wheel for sqlalchemy (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for sqlalchemy: filename=SQLAlchemy-1.3.9-cp37-cp37m-linux_x86_64.whl size=1159121 sha256=6219e481f25433996c55656f565ca1a0971b10779c3c3f4733d603bb8f84bb29\n",
-      "  Stored in directory: /home/jupyterlab/.cache/pip/wheels/03/71/13/010faf12246f72dc76b4150e6e599d13a85b4435e06fb9e51f\n",
-      "Successfully built sqlalchemy\n",
-      "Installing collected packages: sqlalchemy\n",
-      "  Attempting uninstall: sqlalchemy\n",
-      "    Found existing installation: SQLAlchemy 1.3.24\n",
-      "    Uninstalling SQLAlchemy-1.3.24:\n",
-      "      Successfully uninstalled SQLAlchemy-1.3.24\n",
-      "Successfully installed sqlalchemy-1.3.9\n"
+      "Requirement already satisfied: sqlalchemy==1.3.9 in /home/jupyterlab/conda/envs/python/lib/python3.7/site-packages (1.3.9)\n"
      ]
     }
    ],
@@ -110,18 +96,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sql extension is already loaded. To reload it, use:\n",
+      "  %reload_ext sql\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext sql"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {
     "tags": []
    },
@@ -135,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {
     "tags": []
    },
@@ -146,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {
     "tags": []
    },
@@ -157,7 +152,7 @@
        "'Connected: @my_data1.db'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,17 +241,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "UsageError: Line magic function `%sql` not found.\n"
+      " * sqlite:///my_data1.db\n",
+      "Done.\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Launch_Site</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>CCAFS LC-40</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>VAFB SLC-4E</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>KSC LC-39A</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>CCAFS SLC-40</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('CCAFS LC-40',), ('VAFB SLC-4E',), ('KSC LC-39A',), ('CCAFS SLC-40',)]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
