--- a/Lab 4 - EDA with SQL.ipynb
+++ b/Lab 4 - EDA with SQL.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {
     "tags": []
    },
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {
     "tags": []
    },
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {
     "tags": []
    },
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {
     "tags": []
    },
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {
     "tags": []
    },
@@ -152,7 +152,7 @@
        "'Connected: @my_data1.db'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "metadata": {
     "tags": []
    },
@@ -324,37 +324,97 @@
        "<table>\n",
        "    <thead>\n",
        "        <tr>\n",
+       "            <th>Date</th>\n",
+       "            <th>Time (UTC)</th>\n",
+       "            <th>Booster_Version</th>\n",
        "            <th>Launch_Site</th>\n",
+       "            <th>Payload</th>\n",
+       "            <th>PAYLOAD_MASS__KG_</th>\n",
+       "            <th>Orbit</th>\n",
+       "            <th>Customer</th>\n",
+       "            <th>Mission_Outcome</th>\n",
+       "            <th>Landing_Outcome</th>\n",
        "        </tr>\n",
        "    </thead>\n",
        "    <tbody>\n",
        "        <tr>\n",
+       "            <td>2010-06-04</td>\n",
+       "            <td>18:45:00</td>\n",
+       "            <td>F9 v1.0  B0003</td>\n",
        "            <td>CCAFS LC-40</td>\n",
+       "            <td>Dragon Spacecraft Qualification Unit</td>\n",
+       "            <td>0</td>\n",
+       "            <td>LEO</td>\n",
+       "            <td>SpaceX</td>\n",
+       "            <td>Success</td>\n",
+       "            <td>Failure (parachute)</td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>VAFB SLC-4E</td>\n",
+       "            <td>2010-12-08</td>\n",
+       "            <td>15:43:00</td>\n",
+       "            <td>F9 v1.0  B0004</td>\n",
+       "            <td>CCAFS LC-40</td>\n",
+       "            <td>Dragon demo flight C1, two CubeSats, barrel of Brouere cheese</td>\n",
+       "            <td>0</td>\n",
+       "            <td>LEO (ISS)</td>\n",
+       "            <td>NASA (COTS) NRO</td>\n",
+       "            <td>Success</td>\n",
+       "            <td>Failure (parachute)</td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>KSC LC-39A</td>\n",
+       "            <td>2012-05-22</td>\n",
+       "            <td>7:44:00</td>\n",
+       "            <td>F9 v1.0  B0005</td>\n",
+       "            <td>CCAFS LC-40</td>\n",
+       "            <td>Dragon demo flight C2</td>\n",
+       "            <td>525</td>\n",
+       "            <td>LEO (ISS)</td>\n",
+       "            <td>NASA (COTS)</td>\n",
+       "            <td>Success</td>\n",
+       "            <td>No attempt</td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>CCAFS SLC-40</td>\n",
+       "            <td>2012-10-08</td>\n",
+       "            <td>0:35:00</td>\n",
+       "            <td>F9 v1.0  B0006</td>\n",
+       "            <td>CCAFS LC-40</td>\n",
+       "            <td>SpaceX CRS-1</td>\n",
+       "            <td>500</td>\n",
+       "            <td>LEO (ISS)</td>\n",
+       "            <td>NASA (CRS)</td>\n",
+       "            <td>Success</td>\n",
+       "            <td>No attempt</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>2013-03-01</td>\n",
+       "            <td>15:10:00</td>\n",
+       "            <td>F9 v1.0  B0007</td>\n",
+       "            <td>CCAFS LC-40</td>\n",
+       "            <td>SpaceX CRS-2</td>\n",
+       "            <td>677</td>\n",
+       "            <td>LEO (ISS)</td>\n",
+       "            <td>NASA (CRS)</td>\n",
+       "            <td>Success</td>\n",
+       "            <td>No attempt</td>\n",
        "        </tr>\n",
        "    </tbody>\n",
        "</table>"
       ],
       "text/plain": [
-       "[('CCAFS LC-40',), ('VAFB SLC-4E',), ('KSC LC-39A',), ('CCAFS SLC-40',)]"
+       "[('2010-06-04', '18:45:00', 'F9 v1.0  B0003', 'CCAFS LC-40', 'Dragon Spacecraft Qualification Unit', 0, 'LEO', 'SpaceX', 'Success', 'Failure (parachute)'),\n",
+       " ('2010-12-08', '15:43:00', 'F9 v1.0  B0004', 'CCAFS LC-40', 'Dragon demo flight C1, two CubeSats, barrel of Brouere cheese', 0, 'LEO (ISS)', 'NASA (COTS) NRO', 'Success', 'Failure (parachute)'),\n",
+       " ('2012-05-22', '7:44:00', 'F9 v1.0  B0005', 'CCAFS LC-40', 'Dragon demo flight C2', 525, 'LEO (ISS)', 'NASA (COTS)', 'Success', 'No attempt'),\n",
+       " ('2012-10-08', '0:35:00', 'F9 v1.0  B0006', 'CCAFS LC-40', 'SpaceX CRS-1', 500, 'LEO (ISS)', 'NASA (CRS)', 'Success', 'No attempt'),\n",
+       " ('2013-03-01', '15:10:00', 'F9 v1.0  B0007', 'CCAFS LC-40', 'SpaceX CRS-2', 677, 'LEO (ISS)', 'NASA (CRS)', 'Success', 'No attempt')]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "%sql SELECT * FROM SPACEXTABLE WHERE Launch_Site LIKE '%CCA%' LIMIT 5\n",
-    "#%sql SELECT distinct(Launch_Site) FROM SPACEXTABLE"
+    "%sql SELECT * FROM SPACEXTABLE WHERE Launch_Site LIKE '%CCA%' LIMIT 5"
    ]
   },
   {
